# SLECS

./: .gitignore  CMakeLists.txt  ECS.h  ECSTest  LICENSE  README.md  SLECS.h  Test.cpp
example/: CMakeLists.txt  main.cpp
include/: SLECS.h
src/: ComponentArray.h  ComponentManager.h  ECSCommon.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.cpp  SystemManager.h
